--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -7,6 +7,6 @@
 <h4>価格</h4>
 <%= f.text_field :price %>
 <h4>イメージ</h4>
-<%= f.file_field :image, accept: "image/*" %>
+<%= f.file_field :item_image, accept: "image/*" %>
 <%= f.submit '投稿' %>
 <% end %>
