--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         <%= link_to "カート", public_cart_items_path, method: :get %>
         <%= link_to "注文履歴", public_orders_path, method: :get %>
         <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-        <%= link_to 'マイページ', public_customer_path(current_customer.id) %>
+        <%= link_to 'マイページ', public_customers_mypage_path %>
       <% else %>
         <%= link_to "ログイン", new_customer_session_path,method: :get %>
         <%= link_to "新規登録", new_customer_registration_path, method: :get %>
